--- a/index.html
+++ b/index.html
@@ -80,7 +80,12 @@
 								<b>Designer</b>
 								<b>Freelancer</b>
 							</span>
+
 						</p>
+						   <div class="centered-div">
+							    <a href="Personal.html" class="button">Personal</a>
+							    <a href="Professional.html" class="button">Professional</a>
+							</div>
 					</div>
 					<!-- Social -->
 					<div class="social">
@@ -117,7 +122,19 @@
 										<div class="loc">
 											<i class="fas fa-map-marked-alt"></i> Delhi, India
 										</div>
-										<p>Hello! I’m Utkrisht Sharma a self-taught Developer & Designer with over five years of experience. I'm very passionate and dedicated to programming. I enjoy playing around data structures and algorithms but I find the most satisfaction in seeing the finished product do everything for you that it was created to do.
+										<p>Utkrisht Sharma is a dynamic and accomplished Full Stack Software Engineer based in Canada (remote) with a rich background in developing innovative solutions for diverse industries. 
+
+In his recent role at Yactraq Online Inc, as a Full Stack Software Engineer, Utkrisht not only demonstrated technical excellence but also negotiated a 20% raise within the first month for outstanding performance. He played a pivotal role in creating the Emotion Detection module, a core asset for the company, and independently developed a "Text to Emotion Detection" module using NLTK and machine learning techniques. Utkrisht productionized a service for automating the configuration of Google Cloud app monitoring, integrating various APIs and employing the MEAN stack, Docker, Microservices, and Kubernetes.
+
+As a Data Science Engineer at Aerogram (IIT) in Delhi, India, he contributed significantly to a startup specializing in city-scale Air Pollution Monitors. Utkrisht achieved a remarkable 95% accuracy in sensor value prediction, leading to a 95% reduction in data storage requirements. His optimizations in circuit design resulted in a 20% performance boost, enhancing the overall efficiency of the pollution monitoring system.
+
+At Proud Care Foundation in Delhi, India, Utkrisht served as a Software Engineer and created a highly successful web application catering to small businesses. He utilized a tech stack including React, Vue.js, jQuery, MongoDB, Node.js, and GitHub. His strategic UI/UX enhancements significantly improved user retention rates by 20%, and automation of repetitive processes led to a commendable 15% increase in overall productivity.
+
+Utkrisht holds a Master of Science in Computer Science from San Francisco State University and a Bachelor's in Computer Science and Engineering from Amity University. He has earned several certificates, including AWS Certified Machine Learning & Cloud Computing - SPECIALTY, and has completed courses from DataCamp, IBM, IITCL, and Coursera.
+
+His impressive project work and publications include two research papers published in the International Journal for Scientific Research & Development, a patent on "Detection of soil pollution and Garbage in society using AI-based Drone," and the creation of an AI assistant Drone Swarm that won the 1st position in the Indian AIR Force Mehar Baba Swarm Drone Competition in October 2019.
+
+Utkrisht Sharma is not only a skilled technologist but also a strategic thinker and leader, consistently delivering impactful solutions across various domains.
 										</p>
 									</div>
 									<!-- Icon Info -->
@@ -359,7 +376,8 @@
 					<div class="row mt-100">
 						<div class="col-lg-12 col-sm-12">
 							<div class="contact-form ">
-                        		<form method="post" class="box-1 contact-valid" id="contact-form">
+                        		<form method="post" class="box-1 contact-valid" id="contact-form" action="contact.php">
+
 									<div class="row">
                             			<div class="col-lg-6 col-sm-12">
                                 			<input type="text" name="name" id="name" class="form-control" placeholder="Name *">
@@ -446,5 +464,5 @@
         	});		
 		</script>
     <center><font size="2">This is the free demo result. For a full version of this website, please go to  <a href="https://www6.waybackmachinedownloader.com/website-downloader-online/scrape-all-files/">https://www6.waybackmachinedownloader.com/website-downloader-online/scrape-all-files/</a></font></center></body>
-<!-- SumitCoder -->
+<!-- Utkrisht Sharma -->
 </html>
