--- a/Professional.html
+++ b/Professional.html
@@ -11,7 +11,25 @@
     </div>
 
     <div class="portfolio">
-        <!-- Your professional portfolio content goes here -->
+        <!-- GitHub Repositories -->
+        <h2>My GitHub Repositories</h2>
+        <div class="repository-list">
+            <div class="repository-item">
+                <a href="https://github.com/utkrishtsharma/pizza_web_app" target="_blank">pizza_web_app</a>
+            </div>
+            <div class="repository-item">
+                <a href="https://github.com/utkrishtsharma/pizza_website" target="_blank">pizza_website</a>
+            </div>
+            <div class="repository-item">
+                <a href="https://github.com/utkrishtsharma/SF_foodtruck_generator" target="_blank">SF_foodtruck_generator</a>
+            </div>
+            <div class="repository-item">
+                <a href="https://github.com/utkrishtsharma/DOORDASH_API_INTEGRATION" target="_blank">DOORDASH_API_INTEGRATION</a>
+            </div>
+            <div class="repository-item">
+                <a href="https://github.com/utkrishtsharma/Resume-Matcher" target="_blank">Resume-Matcher</a>
+            </div>
+        </div>
     </div>
 </body>
 </html>
