--- a/Professional.html
+++ b/Professional.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ts<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
 
     <div class="portfolio">
         <!-- GitHub Repositories -->
-        <h2>My GitHub Repositories</h2>
+        <h2>My Project Repositories</h2>
         <div class="repository-list">
             <div class="repository-item">
                 <a href="https://github.com/utkrishtsharma/pizza_web_app" target="_blank">pizza_web_app</a>
