--- a/Professional.html
+++ b/Professional.html
@@ -34,12 +34,13 @@
         }
         .repository-card {
             background: rgba(255, 255, 255, 0.8);
-            border-radius: 10px;
+            border-radius: 10%;
             padding: 20px;
             margin: 15px;
             box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s, box-shadow 0.3s, background 0.3s;
             width: 300px;
+            text-align: center;
         }
         .repository-card:hover {
             transform: translateY(-10px);
@@ -48,6 +49,12 @@
         }
         .repository-card h3 {
             margin-top: 0;
+            font-size: 1.2em;
+            color: #0073e6;
+        }
+        .repository-card p {
+            font-size: 0.9em;
+            color: #555;
         }
         .repository-card a {
             text-decoration: none;
@@ -69,7 +76,7 @@
     </div>
 
     <div class="portfolio">
-        <h2>My GitHub Repositories</h2>
+        <h2>My Project's GitHub Repositories</h2>
         <div class="repository-list" id="repository-list">
             <!-- Repositories will be dynamically inserted here -->
         </div>
