--- a/Professional.html
+++ b/Professional.html
@@ -50,24 +50,24 @@
         .repository-card h3 {
             margin-top: 0;
             font-size: 1.2em;
-            color: #0073e6;
+            color: black;
         }
         .repository-card p {
             font-size: 0.9em;
-            color: #555;
+            color: black;
         }
         .repository-card a {
             text-decoration: none;
-            color: #0073e6;
+            color: black;
         }
         .repository-card a:hover {
             text-decoration: underline;
         }
-        .card-color-1 { background: rgba(255, 255, 255, 0.9); }
-        .card-color-2 { background: rgba(224, 247, 250, 0.9); }
-        .card-color-3 { background: rgba(255, 249, 196, 0.9); }
-        .card-color-4 { background: rgba(255, 236, 179, 0.9); }
-        .card-color-5 { background: rgba(225, 190, 231, 0.9); }
+        .card-color-1 { background: rgba(255, 255, 25, 0.8); }
+        .card-color-2 { background: rgba(224, 247, 20, 0.8); }
+        .card-color-3 { background: rgba(255, 249, 16, 0.8); }
+        .card-color-4 { background: rgba(255, 236, 19, 0.8); }
+        .card-color-5 { background: rgba(225, 190, 21, 0.8); }
     </style>
 </head>
 <body>
