--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 
 						</p>
 						   <div class="centered-div">
-							    <a href="Personal.html" class="button">Personal</a>
+							    <a href="password.html" class="button">Personal</a>
 							    <a href="Professional.html" class="button">Professional</a>
 							</div>
 					</div>
