--- a/Personal.html
+++ b/Personal.html
@@ -50,7 +50,7 @@
                     <td>2023-08-20</td>
                 </tr>
                 <tr>
-                    <td><a href="https://example.com/project3">Project 3</a></td>
+                    <td><a href="https://example.com/project3">EPR </a></td>
                     <td>Not Started</td>
                     <td>N/A</td>
                     <td>N/A</td>
