--- a/Personal.html
+++ b/Personal.html
@@ -52,8 +52,12 @@
                 <tr>
                     <td><a href="https://example.com/project3">EPR </a></td>
                     <td>Not Started</td>
+
                     <td>N/A</td>
                     <td>N/A</td>
+                </tr>
+                <tr>
+                    <td><a href="atoms.html" class="button">Create ATOMS</a></td>
                 </tr>
             </tbody>
         </table>
